manifests/frigate/fleet1-lan-ingressroute.yaml
---
# Traefik IngressRoute: frigate.fleet1.lan with mTLS device certificate enforcement.
# TLS cert is provided by the fleet1-lan-wildcard-tls TLSStore (SNI-selected).
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frigate-fleet1-lan
  namespace: frigate
spec:
  entryPoints:
    - websecure
  tls:
    options:
      name: device-mtls
  routes:
    - match: Host(`frigate.fleet1.lan`)
      kind: Rule
      services:
        - name: frigate
          port: 5000
